# minigraf-python

./: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
minigraf/: __init__.py
src/: lib.rs
tests/: test_basic.py
