[package]
name = "minigraf-python-shim"
version = "0.0.0"
edition = "2024"
publish = false
description = "Build shim: provides cdylib and uniffi-bindgen binary for maturin"

[lib]
name = "minigraf_ffi"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
# Renamed to avoid crate-name collision with [lib] name = "minigraf_ffi" above.
# Cargo passes this as --extern minigraf_ffi_upstream=.../libminigraf_ffi-*.rlib
# which lets lib.rs do `pub use minigraf_ffi_upstream::*` without ambiguity.
minigraf-ffi-upstream = { package = "minigraf-ffi", version = "1.1.2" }
uniffi = { version = "0.31.1", features = ["cli"] }

[workspace]
members = ["."]
