[package]
name = "minigraf-python-shim"
version = "0.0.0"
edition = "2024"
publish = false
description = "Python binding for Minigraf — bi-temporal graph database"

[lib]
name = "minigraf_ffi"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
minigraf = "1.1.1"
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1"

[workspace]
members = ["."]
